@@ -1,3 +1,11 @@
+2014-04-22  James Greenhalgh  <james.greenhalgh@arm.com>
+
+	* config/aarch64/aarch64-simd.md
+	(aarch64_cm<optab>di): Always split.
+	(*aarch64_cm<optab>di): New.
+	(aarch64_cmtstdi): Always split.
+	(*aarch64_cmtstdi): New.
+
 2014-06-30  Marek Polacek  <polacek@redhat.com>
 
 	* convert.c (convert_to_integer): Don't instrument conversions if the
